# computador

./: main.py  pyproject.toml
.github/workflows/: Build Flet Android APK.yaml  Build Flet Android APK.yml
src/: main.py
